--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,14 +13,15 @@ repos:
     rev: v2.7.3
     hooks:
       - id: pip-audit
+        args: [--vulnerability-service, "pypi", --cache-dir, ".pip_audit_cache"]
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.9.2
+    rev: v0.9.3
     hooks:
       - id: ruff  # linter
-        args: [ --fix, --config, ruff.toml]
+        args: [--fix, --config, ruff.toml]
       - id: ruff-format  # formatter
-        args: [ --config, ruff.toml ]
+        args: [--config, ruff.toml]
 
   # we use local Xenon instead of pre-commit hook, because:
   # - it seems to have bugs related to "ignore" and "exclude" options
