Update installation for poetry-dynamic-versioning

--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Install Poetry
         run: pipx install poetry --python python3.9
 
+      - name: Install Poetry poetry-dynamic-versioning plugin
+        run: pipx inject poetry "poetry-dynamic-versioning[plugin]"
+
       - name: Configure Poetry for PyPI
         run: poetry config pypi-token.pypi ${{ secrets.PYPI_API_TOKEN }}
 
