--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -46,7 +46,7 @@ jobs:
           key: ${{ matrix.os }}-venv-${{ hashFiles('**/poetry.lock') }}
 
       - name: Install the project dependencies
-        run: poetry sync --with test
+        run: poetry sync --with test -vvv
 
       - name: Check pre-commit
         run: poetry run pre-commit run --all-files
@@ -69,10 +69,10 @@ jobs:
           python-version: 3.9
 
       - name: Install Poetry
-        uses: abatilo/actions-poetry@v3
+        run: pipx install poetry --python python3.9
 
       - name: Install the project dependencies
-        run: poetry sync --with doc
+        run: poetry sync --with docs
 
       - name: Install Pandoc
         uses: r-lib/actions/setup-pandoc@v2
