--- a/.github/workflows/test-pypi-publish.yml
+++ b/.github/workflows/test-pypi-publish.yml
@@ -1,8 +1,9 @@
 name: Publish Python package to TestPyPI
 
 on:
-  release:
-    types: [ published ]
+  push:
+    branches:
+      - master
 
   # allow running manually from the Actions tab
   workflow_dispatch:
