Change dynamic versioning to be compatible with test-pypi on non-tag-commits. Remove xenon, as ruff checks McCabe complexity on its own

--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,12 @@ __pycache__
 *.pdf
 *.csv
 benchmarking/**/*.npy
+dist/
+
 
 docs/**/generated/
 docs/_build/
+docs/examples/
 
 .tmp_coverage_files/
 tests/preprocessing/input_output/data/mol_out.sdf
