Slightly reformat pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,15 @@
 [project]
 name = "scikit-fingerprints"
-dynamic = []  # version is read with poetry-dynamic-versioning on GitHub release from Git tag
+dynamic = ["version"]  # version is read with poetry-dynamic-versioning on GitHub release from Git tag
 description = "Library for effective molecular fingerprints calculation"
 authors = [{name = "AGH ML & Chemoinformatics Group", email = "jadamczy@agh.edu.pl"}]
 repository = "https://github.com/scikit-fingerprints/scikit-fingerprints"
 documentation = "https://scikit-fingerprints.github.io/scikit-fingerprints/"
 keywords = ["molecular fingerprints", "molecular descriptors", "chemoinformatics", "chemistry", "machine learning"]
 license = "MIT"
-packages = [{include = "skfp"}]
+packages = [
+    { include = "skfp" }
+]
 readme = "README.md"
 classifiers = [
     "Intended Audience :: Information Technology",
@@ -40,7 +42,6 @@ dependencies = [
     "scipy>=1.0.0",
     "tqdm>=4.0.0",
 ]
-version = "1.13.0.8.20250130150834"
 
 [project.urls]
 "Homepage" = "https://github.com/scikit-fingerprints/scikit-fingerprints"
@@ -49,6 +50,7 @@ version = "1.13.0.8.20250130150834"
 "Bug Tracker" = "https://github.com/scikit-fingerprints/scikit-fingerprints/issues"
 
 [tool.poetry]
+version = "0.0.0"
 
 [tool.poetry.group.dev]
 optional = true
@@ -95,7 +97,7 @@ matplotlib = "*"
 ogb = "*"
 
 [tool.poetry-dynamic-versioning]
-enable = false
+enable = true
 vcs = "git"
 latest-tag = true
 tag-branch = "remotes/origin/master"
