--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,12 @@
 [project]
-name = "skfp"
-dynamic = ["version"]  # version is read with poetry-dynamic-versioning on GitHub release from Git tag
+name = "scikit-fingerprints"
+version = "0.0.0"  # we set version dynamically in GitHub Actions from Git tags
 description = "Library for effective molecular fingerprints calculation"
-authors = [
-    { name = "Scikit-Fingerprints Development Team", email = "scikitfingerprints@gmail.com" }
-]
-repository = "https://github.com/scikit-fingerprints/scikit-fingerprints"
-documentation = "https://scikit-fingerprints.github.io/scikit-fingerprints/"
-keywords = ["molecular fingerprints", "molecular descriptors", "cheminformatics"]
+authors = [{ name = "AGH ML & Chemoinformatics Group", email = "jadamczy@agh.edu.pl" }]
+keywords = ["molecular fingerprints", "molecular descriptors", "chemoinformatics", "chemistry", "machine learning"]
 license = "MIT"
-packages = [
-    { include = "skfp" }
-]
 readme = "README.md"
 classifiers = [
-    "Development Status :: 4 - Beta",
     "Intended Audience :: Information Technology",
     "Intended Audience :: Science/Research",
     "License :: OSI Approved :: MIT License",
@@ -47,13 +39,13 @@ dependencies = [
 ]
 
 [project.urls]
-"Homepage" = "https://github.com/scikit-fingerprints/scikit-fingerprints"
-"Documentation" = "https://scikit-fingerprints.github.io/scikit-fingerprints/"
-"Repository" = "https://github.com/scikit-fingerprints/scikit-fingerprints"
+homepage = "https://github.com/scikit-fingerprints/scikit-fingerprints"
+repository = "https://github.com/scikit-fingerprints/scikit-fingerprints"
+documentation = "https://scikit-fingerprints.github.io/scikit-fingerprints"
 "Bug Tracker" = "https://github.com/scikit-fingerprints/scikit-fingerprints/issues"
 
 [tool.poetry]
-version = "0.0.0"
+packages = [{ include = "skfp" }]
 
 [tool.poetry.group.dev]
 optional = true
@@ -99,18 +91,9 @@ lightgbm = "*"
 matplotlib = "*"
 ogb = "*"
 
-[tool.poetry-dynamic-versioning]
-enable = true
-vcs = "git"
-latest-tag = true
-tag-branch = "remotes/origin/master"
-style = "pep440"
-strict = true
-format-jinja = "{% if distance == 0 %}{{ base }}{% else %}{{ base }}.{{ distance }}.{{timestamp}}{% endif %}"
-
 [tool.pytest.ini_options]
 python_files = "*.py"
 
 [build-system]
-requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
-build-backend = "poetry_dynamic_versioning.backend"
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
