--- a/.github/workflows/test-pypi-publish.yml
+++ b/.github/workflows/test-pypi-publish.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Set package release version
         # :11 changes "refs/tags/v1.2.3" to "1.2.3", where "v1.2.3" is tag string
         # timestamp "YYYYMMDDHHMMSS" is added at the end
-        run: poetry version $(echo ${GITHUB_REF:11}).$(date +'%Y%m%d%H%M%S')"
+        run: poetry version $(echo ${GITHUB_REF:11}).$(date +'%Y%m%d%H%M%S')
 
       - name: Configure Poetry for TestPyPI
         run: >-
