--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,6 +31,13 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      # set version (e.g. 1.2.3) from the latest Git tag on master branch
+      - name: Set package release version
+        # :11 changes "refs/tags/v1.2.3" to "1.2.3", where "v1.2.3" is tag string
+        # timestamp "YYYYMMDDHHMMSS" is added at the end
+        run: |
+          echo ${GITHUB_REF}
+
       - name: Install poetry
         run: pipx install poetry --python python${{ matrix.python-version }}
 
