Fix latest Git tag fetching

--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -24,8 +24,10 @@ jobs:
 
       # set version (e.g. 1.2.3) from the latest Git tag on master branch
       - name: Set package release version
-        # :11 changes "refs/tags/v1.2.3" to "1.2.3", where "v1.2.3" is tag string
-        run: poetry version $(echo ${GITHUB_REF:11})
+        # :1 changes "v1.2.3" to "1.2.3", where "v1.2.3" is tag string
+        run: |
+          LATEST_TAG=$(git describe --tags --abbrev=0)
+          poetry version ${LATEST_TAG:1}
 
       - name: Configure Poetry for PyPI
         run: poetry config pypi-token.pypi ${{ secrets.PYPI_API_TOKEN }}
