--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,6 +31,14 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      # set version (e.g. 1.2.3) from the latest Git tag on master branch
+      - name: Set package release version
+        # :1 changes "v1.2.3" to "1.2.3", where "v1.2.3" is tag string
+        # timestamp "YYYYMMDDHHMMSS" is added at the end
+        run: |
+          LATEST_TAG=$(git describe --tags --abbrev=0)
+          echo "${LATEST_TAG:1}.$(date +'%Y%m%d%H%M%S')"
+
       - name: Install poetry
         run: pipx install poetry --python python${{ matrix.python-version }}
 
