--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -41,6 +41,7 @@ jobs:
         run: |
           LATEST_TAG=$(git describe --tags --abbrev=0)
           echo "${LATEST_TAG:1}.$(date +'%Y%m%d%H%M%S')"
+        shell: bash
 
       - name: Install poetry
         run: pipx install poetry --python python${{ matrix.python-version }}
