--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,18 +24,18 @@ classifiers = [
 requires-python = ">=3.10,<3.14"
 
 dependencies = [
-    "descriptastorus>=2.0.0",
-    "e3fp>=1.0.0",
+    "descriptastorus>=2.0.0,<3",
+    "e3fp>=1.0.0,<2",
     "huggingface_hub>=0.0.0",
-    "joblib>=1.0.0",
-    "mordredcommunity>=2.0.0",
+    "joblib>=1.0.0,<2",
+    "mordredcommunity>=2.0.0,<3",
     "numba>=0.48.0,<1",
     "numpy>=1.20.0,<2",
     "pandas<3",
-    "rdkit<=2024.3.3",
-    "scikit-learn>=1.0.0",
-    "scipy>=1.0.0",
-    "tqdm>=4.0.0",
+    "rdkit<=2024.9.4",
+    "scikit-learn>=1.0.0,<2",
+    "scipy>=1.0.0,<2",
+    "tqdm>=4.0.0,<5",
 ]
 
 [project.urls]
