--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -50,7 +50,7 @@ jobs:
         run: poetry check
 
       - name: Run tests with pytest
-        run: poetry run python -X faulthandler -m pytest -p no:faulthandler -s tests
+        run: poetry run make test
 
   ci-docs:
     runs-on: ubuntu-latest
