--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,7 +56,7 @@ jupyter = "*"
 mypy = "*"
 pip-audit = "*"
 pre-commit = "*"
-pytest = "8.0.*"
+pytest = "*"
 pytest-cov = "*"
 ruff = "*"
 setuptools = "*"  # to avoid PyCharm errors
@@ -69,7 +69,7 @@ optional = true
 mypy = "*"
 pip-audit = "*"
 pre-commit = "*"
-pytest = "8.0.*"
+pytest = "*"
 ruff = "*"
 xenon = "*"
 
