--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ requires-python = ">=3.10,<3.14"
 dependencies = [
     "descriptastorus>=2.0.0,<3",
     "e3fp>=1.2.6,<2",
-    "huggingface_hub>=0.0.0",
+    "huggingface_hub<1",
     "joblib>=1.0.0,<2",
     "mordredcommunity>=2.0.0,<3",
     "numba>=0.48.0,<1",
