--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ dependencies = [
     "joblib>=1.0.0,<2",
     "mordredcommunity>=2.0.0,<3",
     "numba>=0.48.0,<1",
-    "numpy>=1.20.0,<2",
+    "numpy>=1.20.0,<3",
     "pandas<3",
     "rdkit<=2024.9.5",
     "scikit-learn>=1.0.0,<2",
@@ -56,7 +56,7 @@ jupyter = "*"
 mypy = "*"
 pip-audit = "*"
 pre-commit = "*"
-pytest = "7.*"
+pytest = "*"
 pytest-cov = "*"
 ruff = "*"
 setuptools = "*"  # to avoid PyCharm errors
@@ -69,7 +69,7 @@ optional = true
 mypy = "*"
 pip-audit = "*"
 pre-commit = "*"
-pytest = "7.*"
+pytest = "*"
 ruff = "*"
 xenon = "*"
 
