Add Braun-Blanquet distance (#395)
Co-authored-by: Jakub Adamczyk <jakubadamczyk10@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,13 +26,13 @@ requires-python = ">=3.10,<3.14"
 dependencies = [
     "descriptastorus>=2.0.0,<3",
     "e3fp>=1.2.6,<2",
-    "huggingface_hub>=0.0.0",
+    "huggingface_hub<1",
     "joblib>=1.0.0,<2",
     "mordredcommunity>=2.0.0,<3",
     "numba>=0.48.0,<1",
-    "numpy>=1.20.0,<2",
+    "numpy>=1.20.0,<3",
     "pandas<3",
-    "rdkit<=2024.9.4",
+    "rdkit<=2024.9.5",
     "scikit-learn>=1.0.0,<2",
     "scipy>=1.0.0,<2",
     "tqdm>=4.0.0,<5",
