--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,7 +34,7 @@ jobs:
           poetry config virtualenvs.create true --local
           poetry config virtualenvs.in-project true --local
 
-      - uses: actions/cache@v3
+      - uses: actions/cache@v4
         name: Cache venv
         with:
           path: ./.venv
@@ -43,7 +43,7 @@ jobs:
       - name: Debug
         run: echo $HOME
 
-      - uses: actions/cache@v3
+      - uses: actions/cache@v4
         name: Cache datasets
         with:
           path: ~/scikit_learn_data
@@ -60,6 +60,9 @@ jobs:
 
       - name: Run tests with pytest
         run: poetry run make test
+
+      - name: Debug
+        run: ls $HOME
 
   ci-docs:
     runs-on: ubuntu-latest
@@ -81,5 +84,17 @@ jobs:
       - name: Install Pandoc
         uses: r-lib/actions/setup-pandoc@v2
 
+      - name: Debug
+        run: echo $HOME
+
+      - uses: actions/cache@v4
+        name: Cache datasets
+        with:
+          path: ~/scikit_learn_data
+          key: ${{ hashFiles('~/scikit-learn-data/**.csv') }}
+
       - name: Build documentation
         run: poetry run make doctest
+
+      - name: Debug
+        run: ls $HOME
