--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -41,7 +41,7 @@ jobs:
           key: ${{ matrix.os }}-venv-${{ hashFiles('**/poetry.lock') }}
 
       - name: Debug
-        run: ls $HOME/scikit_learn_data
+        run: ls $HOME
 
       - uses: actions/cache@v4
         name: Cache datasets
@@ -85,7 +85,7 @@ jobs:
         uses: r-lib/actions/setup-pandoc@v2
 
       - name: Debug
-        run: ls $HOME/scikit_learn_data
+        run: ls $HOME
 
       - uses: actions/cache@v4
         name: Cache datasets
