--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -47,8 +47,7 @@ jobs:
         name: Cache datasets
         with:
           path: ~/scikit_learn_data
-          key: datasets-${{ hashFiles('~/scikit_learn_data/**.csv') }}
-          lookup-only: true
+          key: datasets
 
       - name: Install the project dependencies
         run: poetry sync --with test
@@ -61,9 +60,6 @@ jobs:
 
       - name: Run tests with pytest
         run: poetry run make test
-
-      - name: Debug
-        run: ls $HOME/scikit_learn_data
 
   ci-docs:
     runs-on: ubuntu-latest
@@ -92,8 +88,7 @@ jobs:
         name: Cache datasets
         with:
           path: ~/scikit_learn_data
-          key: datasets-${{ hashFiles('~/scikit_learn_data/**.csv') }}
-          lookup-only: true
+          key: datasets
 
       - name: Build documentation
         run: poetry run make doctest
