--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,7 +12,7 @@ concurrency:
 jobs:
   ci:
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
         python-version: ["3.10", "3.11", "3.12", "3.13"]
         os: [macos-latest, ubuntu-latest, windows-latest]
@@ -34,11 +34,17 @@ jobs:
           poetry config virtualenvs.create true --local
           poetry config virtualenvs.in-project true --local
 
-      - uses: actions/cache@v3
-        name: Define a venv cache
+      - uses: actions/cache@v4
+        name: Cache venv
         with:
           path: ./.venv
           key: ${{ matrix.os }}-venv-${{ hashFiles('**/poetry.lock') }}
+
+      - uses: actions/cache@v4
+        name: Cache datasets
+        with:
+          path: ~/scikit_learn_data
+          key: datasets
 
       - name: Install the project dependencies
         run: poetry sync --with test
@@ -71,6 +77,12 @@ jobs:
 
       - name: Install Pandoc
         uses: r-lib/actions/setup-pandoc@v2
+
+      - uses: actions/cache@v4
+        name: Cache datasets
+        with:
+          path: ~/scikit_learn_data
+          key: datasets
 
       - name: Build documentation
         run: poetry run make doctest
