Rewrite Poetry to uv

--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -21,21 +21,18 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: Install Poetry
-        run: pipx install poetry --python python3.10
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
 
-      # set version (e.g. 1.2.3) from the latest Git tag on master branch
+      # set version (e.g. 1.2.3) from the latest Git tag on the master branch
       - name: Set package release version
-        # :1 changes "v1.2.3" to "1.2.3", where "v1.2.3" is tag string
+        # :1 changes "v1.2.3" to "1.2.3", where "v1.2.3" is a tag string
         run: |
           LATEST_TAG=$(git describe --tags --abbrev=0)
-          poetry version ${LATEST_TAG:1}
+          uv version ${LATEST_TAG:1}
         shell: bash
-
-      - name: Configure Poetry for PyPI
-        run: poetry config pypi-token.pypi ${{ secrets.PYPI_API_TOKEN }}
 
       - name: Build and publish to PyPI
         run: >-
-          poetry build
-          && poetry publish
+          uv build
+          && uv publish --token ${{ secrets.PYPI_API_TOKEN }}
