--- a/.github/workflows/docs-publish.yml
+++ b/.github/workflows/docs-publish.yml
@@ -33,17 +33,17 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: Install Poetry
-        run: pipx install poetry --python python3.10
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
 
       - name: Install the project dependencies
-        run: poetry sync --with docs
+        run: uv sync --group docs
 
       - name: Install Pandoc
         uses: r-lib/actions/setup-pandoc@v2
 
       - name: Build documentation
-        run: poetry run make docs
+        run: uv run make docs
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
