--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,19 +26,14 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install poetry
-        run: pipx install poetry --python python${{ matrix.python-version }}
-
-      - name: Set up venv
-        run: |
-          poetry config virtualenvs.create true --local
-          poetry config virtualenvs.in-project true --local
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
 
       - uses: actions/cache@v4
         name: Cache venv
         with:
           path: ./.venv
-          key: ${{ matrix.os }}-venv-${{ hashFiles('**/poetry.lock') }}
+          key: ${{ matrix.os }}-venv-${{ hashFiles('**/uv.lock') }}
 
       - uses: actions/cache@v4
         name: Cache datasets
@@ -47,16 +42,13 @@ jobs:
           key: datasets
 
       - name: Install the project dependencies
-        run: poetry sync --with test
+        run: uv sync --group test
 
       - name: Check pre-commit
-        run: poetry run pre-commit run --all-files
-
-      - name: Validate pyproject.toml
-        run: poetry check
+        run: uv run pre-commit run --all-files
 
       - name: Run tests with pytest
-        run: poetry run make test
+        run: uv run make test
 
   ci-docs:
     runs-on: ubuntu-latest
@@ -69,11 +61,11 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: Install Poetry
-        run: pipx install poetry --python python3.10
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
 
       - name: Install the project dependencies
-        run: poetry sync --with docs
+        run: uv sync --group docs
 
       - name: Install Pandoc
         uses: r-lib/actions/setup-pandoc@v2
@@ -85,4 +77,4 @@ jobs:
           key: datasets
 
       - name: Build documentation
-        run: poetry run make doctest
+        run: uv run make doctest
