--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,9 +5,16 @@ build:
   tools:
     python: "3.10"
   jobs:
-    post_install:
-      - pip install uv
-      - UV_PROJECT_ENVIRONMENT=$READTHEDOCS_VIRTUALENV_PATH uv sync --only-group docs --link-mode=copy
-
-sphinx:
-  configuration: docs/conf.py
+    pre_create_environment:
+      - asdf plugin add uv
+      - asdf install uv latest
+      - asdf global uv latest
+    create_environment:
+       - uv venv "${READTHEDOCS_VIRTUALENV_PATH}"
+    install:
+       - UV_PROJECT_ENVIRONMENT="${READTHEDOCS_VIRTUALENV_PATH}" uv sync --frozen --only-group docs
+    build:
+      html:
+        - mkdir -p $READTHEDOCS_OUTPUT/html/
+        - make -C docs html
+        - cp -r docs/_build/html $READTHEDOCS_OUTPUT/html/
